# z2vqe

./: .gitignore  dla_dim.ipynb  paper_plots.ipynb  plot_vqe.ipynb  pyproject.toml  run_z2_qfim.py  run_z2_vqe.py  z2_ground_state.ipynb  z2_qfim.ipynb  z2_specrum.ipynb  z2_vqe.ipynb
src/: qfim.py  qfim_vqe.py  z2_lgt.py  z2_lgt_solved.py  z2_vqe.py
z2vqe/: qfim_vqe.py  z2_lgt.py  z2_lgt_solved.py
z2vqe/experiments/: __init__.py  configurations.py  dla.py  generators.py  mpiexec.py  qfim.py  sbd.py  vqe.py
z2vqe/qujax_dev/: statetensor_observable.py
