[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "z2vqe"
version = "0.0.1"
authors = [
  { name="Yutaro Iiyama", email="iiyama@icepp.s.u-tokyo.ac.jp" },
]
description = "Z2 LGT VQE and QFIM calculation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "jax[cuda12]",
    "jaxopt",
    "qujax",
    "qiskit",
    "fastdla"
]

[project.urls]
Homepage = "https://github.com/yiiyama/z2vqe"
Issues = "https://github.com/yiiyama/z2vqe/issues"
